<resources>
    <string name="app_name">Fragments</string>
    <string name="nullExample">0</string>
    <string name="fragment1">Fragment One</string>
    <string name="fragment2">Fragment Two</string>
    <string name="fragment3">Fragment Three</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="other">U.F.O.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
</resources>
